# Thermal

./: .gitignore  README.md  cal  cal.cpp  cal2.cpp  calibration  calibration.cpp  calibration.yml  calibration_test.cpp  project.repos
calibration/: CMakeLists.txt  README.md  cal.cpp  chess_verify.cpp  dot.cpp  ext  extrensics.cpp  extrinsic_cal.cpp  my_realsense_program  realsense.cpp  test  test.cpp  verify.cpp  verify_dot.cpp
docs/: chessboard_pattern.dxf  thermal_case.step
docs/assets/: pc.webm
pointcloud/: CMakeLists.txt  README.md  calibration.xml  extrinsic.xml  load_pc.cpp  thermal_pc.cpp
stream/: CMakeLists.txt  README.md  depthimage.cpp  lepton  lepton.cpp  test.py
